--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "chalk": "^4.1.0",
+    "cssnano": "^4.1.10",
+    "gh-pages": "^3.1.0",
     "sass": "^1.27.0"
   },
   "scripts": {
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
+    "deploy": "node deploy.js"
   }
 }
